Added some more text and placeholders for figures

--- a/OptimalControl.ipynb
+++ b/OptimalControl.ipynb
@@ -35,8 +35,8 @@
     "*what* the robot should do, rather than designing *how* it should do it.\n",
     "\n",
     "In this chapter, we will discuss how to specify optimal control problems\n",
-    "and how to implement and use optimal control techniques. We will\n",
-    "consider only the open loop problem; however we will mention how an open\n",
+    "and how to implement and use optimal control techniques. We begin by discussing\n",
+    "the open loop problem, and then we will describe how an open\n",
     "loop optimizer can be adapted to closed loop control via the use of\n",
     "*model predictive control*."
    ]
@@ -64,6 +64,8 @@
     "\\end{gathered}\n",
     "\\label{eq:OptimalControl}$$\n",
     "\n",
+    "TODO: illustration (Figure 1)\n",
+    "\n",
     "(For somewhat technical reasons, there are problems for which no optimal\n",
     "trajectory exists, but rather only a sequence of trajectories\n",
     "approaching an optimal cost. Hence, if we prefer to be pedantic, it is\n",
@@ -80,6 +82,8 @@
     "- Minimum time to hit a target $x_{tgt}$ could be implemented as an indicator function $I[x\\neq x_{tgt}]$ where $I[z]$ is 1 if $z$ is true, and 0 otherwise.\n",
     "- Obstacle avoidance and other feasibility constraints can be implemented as indicator functions as well, $\\infty \\cdot I[x \\notin \\mathcal{F}]$ where $\\mathcal{F}$ is the free space.\n",
     "- Smoothed obstacle avoidance can be implemented by a repulsive barrier that decreases to 0 when the distance to the closest obstacle $d$ exceeds some minimum buffer distance $d_{min}$ and incrases to infinity as the distance shrinks to 0. One common form of this barrier is $L(x,u,t) = 1/d^2 - 1/d_{min}^2$ when $d < d_{min}$ and $L(x,u,t) = 0$ otherwise.\n",
+    "\n",
+    "TODO: illustration (Figure 2)\n",
     "\n",
     "It is common to mix and match different types of costs functionals using a _weighted cost functional_ $$J(x,u) = \\sum_{i=1}^N w_i J_i(x,u)$$\n",
     "where each $J_i(x,u)$ is some primitive cost functional and $w_i$ scales its contribution to the final cost. By tuning these weights, a designer can encourage the optimized trajectories to emphasize some aspects of the trajectory over others.\n",
@@ -168,6 +172,8 @@
     "$$A^TP + PA -  PBR^{-1}B^TP + Q = 0.$$ Numerical methods are available\n",
     "for solving the Riccati equation for $P$. This method is known as the\n",
     "Linear Quadratic Regulator (LQR) approach.\n",
+    "\n",
+    "TODO: illustration (Figure 3)\n",
     "\n",
     "As we showed in the [section on LTI stability](Control.ipynb#Stability-in-Linear-Time-Invariant-Systems),\n",
     "traditional pole placement methods can be\n",
@@ -284,6 +290,8 @@
     "maximize/minimize angular acceleration; otherwise, time could be saved\n",
     "by making the control more extreme.\n",
     "\n",
+    "TODO: illustration (Figure 4)\n",
+    "\n",
     "If it can be determined that there are a finite number of possible\n",
     "controls satisfying condition (1), then the optimal control problem\n",
     "becomes one of simply finding *switching times* between optimal\n",
@@ -386,6 +394,8 @@
     "up to time $h$, and/or a more accurate integration technique could be\n",
     "used.\n",
     "\n",
+    "TODO: illustration (Figure 5)\n",
+    "\n",
     "In any case, given a piecewise-constant control trajectory defined by a\n",
     "control sequence $u_1,\\ldots,u_N$, we can derive corresponding points on\n",
     "the state trajectory as follows.\n",
@@ -413,7 +423,7 @@
     "\n",
     "### Descent approaches\n",
     "\n",
-    "Standard gradient-based techniques can be used to solve the problem\n",
+    "Standard gradient-based techniques can be used to solve the direct transcription problem\n",
     "($\\ref{eq:DirectTranscription}$). One difficulty is that to take the gradient\n",
     "of $\\tilde{J}$ with respect to a control variable $u_i$, observe that\n",
     "this choice of control affects *every* state variable $x_k$ with\n",
@@ -466,7 +476,9 @@
     "method. Given a current control trajectory, it approximates the cost\n",
     "function as a quadratic function of the controls, and solves for the\n",
     "minimum of the function.  A similar approach is the _Iterative LQR_ (iLQR) algorithm, which is very closely related to DDP but drops the 2nd derivative of the dynamics function. The exact steps for implementing DDP and iLQR are beyond\n",
-    "the scope of this course but are readily available from other sources.\n",
+    "the scope of this course but are readily available from other sources.  TODO: add links.\n",
+    "\n",
+    "TODO: illustration (Figure 6)\n",
     "\n",
     "### Pseudospectral / collocation methods\n",
     "\n",
@@ -483,7 +495,11 @@
     "\n",
     "To address this problem, it is typical to include a *state trajectory parameterization* in\n",
     "which the state trajectory $x(t)$ is also represented as an optimization variable that is\n",
-    "parameterized explicitly along with the control trajectory. Specifically, we suppose that $$x(t) = \\sum_{i=1}^k d_i \\gamma_i(t)$$ where the $d_i \\in \\mathbb{R}^n$ are state coefficients to be optimized, and the basis functions $\\gamma_i$ are constant.  The main challenge is then to enforce dynamic consistency between the $x$ trajectory and the $u$ trajectory over the time domain.  Because it is impossible to do this exactly in a continuous infinity of points, the dynamic consistance must then be enforced at a finite number of points\n",
+    "parameterized explicitly along with the control trajectory. Specifically, we suppose that $$x(t) = \\sum_{i=1}^k d_i \\gamma_i(t)$$ where the $d_i \\in \\mathbb{R}^n$ are state coefficients to be optimized, and the basis functions $\\gamma_i$ are constant functions of time.\n",
+    "\n",
+    "TODO: illustration (Figure 6)\n",
+    "\n",
+    "The main challenge is then to enforce dynamic consistency between the $x$ trajectory and the $u$ trajectory over the time domain.  Because it is impossible to do this exactly in a continuous infinity of points, the dynamic consistance must then be enforced at a finite number of points\n",
     "in time, which are known as *collocation points*. The result is an\n",
     "equality-constrained, finite-dimensional optimization problem.\n",
     "\n",
@@ -496,6 +512,7 @@
     "\\sum_{i=1}^k d_i \\gamma_i^\\prime(t_j) = f\\left(\\sum_{i=1}^k d_i \\gamma_i(t_j), \\sum_{i=1}^k c_i \\beta_i(t_j) \\right).\n",
     "$$\n",
     "\n",
+    "TODO: describe the ultimate optimization formulation.\n",
     "\n",
     "\n",
     "### Handling infinite-horizon problems\n",
@@ -532,10 +549,15 @@
     "A major issue with any descent-based trajectory optimization approach is\n",
     "local minima. Only in a few cases can we prove that the problem is\n",
     "convex, such as in LTI problems with convex costs and linear control\n",
-    "constraints. As we have seen before, random restarts are one of the most\n",
-    "effective ways to handle local minima, but in the high dimensional spaces of\n",
-    "trajectory optimization, a prohibitive number of restarts is needed to\n",
-    "have a high chance of finding a global optimum."
+    "constraints.\n",
+    "\n",
+    "As we have seen before, random restarts are one of the most\n",
+    "effective ways to handle local minima, but trajectory optimization takes place\n",
+    "in a very high dimensional space. Due to the high dimensionality of the parameter space,\n",
+    "a prohibitive number of restarts is needed if we want to have a high chance of finding a\n",
+    "global optimum.  Hence, for a robot to perform trajectory optimization reliably, a considerable amount of\n",
+    "effort needs to be spent finding good initializers or engineering the cost landscape\n",
+    "such that it has few local minima."
    ]
   },
   {
@@ -570,6 +592,8 @@
     "The value is also known as the *cost to come*, measuring the remaining cost to reach\n",
     "a goal. (This stands in contrast to the *cost to go* which is the cost that would be\n",
     "accumulated to reach a state $x$ from the start.)\n",
+    "\n",
+    "TODO: illustration (Figure 7)\n",
     "\n",
     "It is apparent that at time $T$, the only term that remains is the\n",
     "terminal cost, so one boundary term is given: $$V(x,T) = \\Phi(x).$$ Now\n",
@@ -2474,6 +2498,9 @@
     "\n",
     "4.  Repeat from step 1.\n",
     "\n",
+    "\n",
+    "TODO: illustration (Figure 8)\n",
+    "\n",
     "Overall, as employed in practice MPC is a moderately complex procedure, and from a theoretical perspective it is difficult to analyze and prove stability / convergence properties. However, with careful tuning, MPC\n",
     "can be an extremely high performing and practical nonlinear optimal control\n",
     "technique. There are several design decisions of note when implementing such a MPC controller:\n",
@@ -2498,7 +2525,7 @@
     "\n",
     "The optimizer used in step 2 forms the core of the procedure, and variations in its implementation drastically affect the closed-loop performance.\n",
     "\n",
-    "**Optimizer failures.** To achieve good MPC performance the optimizer should succeed regularly, but optimizer failures can be tolerated to some extent.  A straightforward fallback strategy is to maintain the previous trajectory segment and continue to execute the control computed by the previously optimized trajectory.  The pseudocode is as follows.\n",
+    "**Optimizer failures.** To achieve good MPC performance the optimizer should succeed regularly, but optimizer failures can be tolerated to some extent.  A straightforward fallback strategy is to maintain the previously computed trajectory, and if the optimizer fails, just continue to execute the control along the prior trajectory.  The pseudocode is as follows.\n",
     "\n",
     "1. Maintain state / control trajectory $\\tilde{x}, \\tilde{u}$.\n",
     "\n",
@@ -2519,6 +2546,9 @@
     "\n",
     "3. Compute a finite-horizon optimal trajectory $x,u$ with initial state\n",
     "    $x(0) = x_c$ and starting from initial guess $x_0(t) = \\tilde{x}(\\min(t + \\Delta t,T))$, $u_0(t) = \\tilde{u}(\\min(t + \\Delta t,T))$.\n",
+    "\n",
+    "\n",
+    "TODO: illustration (Figure 9)\n",
     "\n",
     "This can make optimization very fast compared to, say, optimizing from all zeros.  A potential drawback of this method is that it can get stuck in local minima and fail to make progress. Another approach is to add \"diversity\" into the initialization procedure, e.g., via random restarts, so that there is a better chance of escaping local minima.  Step 3 then becomes:\n",
     "\n",
@@ -2550,11 +2580,13 @@
     "\n",
     "**Any-time feasible optimization.** When choosing optimization algorithms, *any-time, feasible* methods are preferable. Rather than waiting until the optimizer converges to some numerical tolerance, we wish to halt optimization and take the best answer after $\\Delta t$ time has elapsed. A feasible method maintains iterates that are feasible so that the partially-optimized trajectory does not violate constraints regardless of when the optimizer is halted.\n",
     "\n",
+    "Note that as long as the optimization problem does not change too much from step to step, it can be effective to do less optimization work per time step but run optimization more frequently (i.e., shorten the time step).  Essentially, the cost of running an optimizer to convergence is amortized over several time steps, although with slightly different initial conditions. In the extreme, the optimizer can be configured to perform only a single iteration of an inner optimization, a technique called real-time iteration (RTI).\n",
+    "\n",
     "**Next state prediction.** Approximately $\\Delta t$ time will pass between the start of optimization and the execution update. During this time, the execution thread will have executed the control $\\tilde{u}(t)$ from $t=0$ to $\\Delta t$, and the optimizer will have no control over the trajectory being executed.\n",
     "\n",
     "If we call the range $t\\in[0,\\Delta t]$ the \"immutable region\", then the best we can do is control the trajectory after the immutable region passes.  Hence, one approach can be to predict the state at which we will arrive once we finish optimization (e.g., simulating the dynamics with control $\\tilde{u}$ up to time $\\Delta t$.  Letting $\\hat{x}_p$ be the predicted state after the immutable region, we can then optimize starting from $\\hat{x}_p$ rather than $x_c$. This typically leads to significantly improved performance for large time steps.\n",
     "\n",
-    "**Real-time iteration.** An even more sophisticated technique called RTI embeds repeated predicted state updates $\\hat{x}_p$ into the optimization loop, and can be helpful when prediction is inaccurate. Since the optimizer usually takes several iterations of some internal step (e.g., a gradient descent or Newton step) before convergence, if we update the initial state constraint $x(0)=\\hat{x}_p$ according to the latest prediction on each step, this will lead to progressively more accurate iterations as the optimizer proceeds.\n",
+    "TODO: illustration (Figure 10)\n",
     "\n",
     "**Gain scheduling.** Gain scheduling is another approach to handling inaccurate predictions. In this approach, the optimizer does not simply compute a reference trajectory $x^{ref},u^{ref}$ but also computes a sequence of gain matrices $K(t)$ such that the control $u(t) = K(t)(x(t)-x^{ref}(t)) +u^{ref}(t)$ uses feedback on the reference tracking error $x(t)-x^{ref}(t)$ to determine the next control.  Methods like DDP and iLQR compute these matrices automatically during their execution, and they provide the optimal control assuming a linearization of the dynamics and a second-order Taylor expansion of the costs about the reference trajectory.  So, rather than having the execution thread execute an open-loop trajectory over the duration $[0,\\Delta t]$, it can execute the gain-scheduled policy in closed-loop during the next optimization iteration.\n",
     "\n"
