Added some more information on Jacobians and Newton's method

--- a/Calculus.ipynb
+++ b/Calculus.ipynb
@@ -104,7 +104,7 @@
     "Or, equivalently, it is the set of points for which all $r$-neighborhoods with $r>0$ contain at least one point of $A$\n",
     "and one point of its complement.\n",
     "\n",
-    "## Functions in higher dimensions\n",
+    "## Scalar fields\n",
     "\n",
     "We will often work with functions that map many variables (a vector) to\n",
     "a single number (a scalar). A *scalar field*\n",
@@ -287,6 +287,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vector fields\n",
+    "\n",
+    "We will also work heavily with functions that map vectors to vectors, which are called *vector fields*. A vector field is a function $f: \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$ mapping $\\mathbf{x}$ to the *vector* $f(\\mathbf{x})$.  We will often refer to the components of the vector output using subscripts:\n",
+    "\n",
+    "$$f(\\mathbf{x}) = \\begin{bmatrix} f_1(\\mathbf{x}) \\\\  f_2(\\mathbf{x}) \\\\ \\vdots \\\\  f_m(\\mathbf{x}) \\end{bmatrix} $$\n",
+    "\n",
+    "where each $f_i$ is itself a scalar field.  A vector field can be thought of as a \"stack\" of scalar fields.\n",
+    "\n",
+    "Although there is no notion of a minimum / maximum of such a function, we can still define continuity using the Euclidean norm rather than absolute value:\n",
+    "\n",
+    "> **Continuity**. A vector field $f$ is continuous on a domain $S\\in \\mathbb{R}^n$ if for\n",
+    "> every point $\\mathbf{x} \\in S$ and $\\epsilon > 0$, there exists a\n",
+    "> neighborhood with radius $\\delta$ around $\\mathbf{x}$ that satisfies\n",
+    "> $\\|f(\\mathbf{x})-f(\\mathbf{y})\\| < \\epsilon$ for all $y \\in N_\\delta(\\mathbf{x})$.\n",
+    "\n",
+    "Equivalently, $f$ is continuous on $S$ if each of its components is continuous on $S$. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Partial derivatives of vector fields\n",
+    "\n",
+    "The partial derivative of a vector field with respect to one of its arguments is a vector, formed by stacking each of the partial derivatives of its components:\n",
+    "\n",
+    "$$\\frac{\\partial f}{\\partial x_j}(\\mathbf{x}) = \\begin{bmatrix} \\frac{\\partial f_1}{\\partial x_j}(\\mathbf{x}) \\\\ \n",
+    "\\frac{\\partial f_2}{\\partial x_j}(\\mathbf{x}) \\\\\n",
+    "\\vdots \\\\\n",
+    "\\frac{\\partial f_m}{\\partial x_j}(\\mathbf{x})\n",
+    "\\end{bmatrix}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Jacobian matrix\n",
+    "\n",
+    "The Jacobian of a vector function is given as the following *matrix of partial derivatives* often written as $\\nabla f$ or $\\frac{\\partial f}{\\partial \\mathbf{x}}$:\n",
+    "\n",
+    "$$\\nabla f(\\mathbf{x}) \\equiv \\frac{\\partial f}{\\partial \\mathbf{x}}(\\mathbf{x}) \\equiv \\begin{bmatrix}\n",
+    "\\frac{\\partial f_1(\\mathbf{x})}{\\partial x_1} & \\cdots & \\frac{\\partial f_1(\\mathbf{x})}{\\partial x_n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots \\\\\n",
+    "\\frac{\\partial f_m(\\mathbf{x})}{\\partial x_1} & \\cdots & \\frac{\\partial f_m(\\mathbf{x})}{\\partial x_n} \n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "You could also express this as gradients of the component functions.  Assuming gradients are column vectors, we have\n",
+    "\n",
+    "$$\\nabla f(\\mathbf{x}) = \\begin{bmatrix} \\nabla f_1(\\mathbf{x})^T \\\\\n",
+    "\\vdots \\\\\n",
+    "\\nabla f_m(\\mathbf{x})^T\n",
+    "\\end{bmatrix}. $$\n",
+    "\n",
+    "The Jacobian is directly related to the directional derivative of $f$, and the following expression gives the rate of change of $f$ as $\\mathbf{x}$ moves in a direction $\\Delta \\mathbf{x}$:\n",
+    "\n",
+    "$$\\left. \\frac{d}{dt} f(\\mathbf{x}+t \\Delta \\mathbf{x}) \\right|_{t=0} = \\nabla f(\\mathbf{x}) \\Delta \\mathbf{x}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Differentiation rules\n",
+    "\n",
+    "Here, let $f : \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$, $g : \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$, and $h : \\mathbb{R}^m \\rightarrow \\mathbb{R}^p$ be vector fields, and let $s : \\mathbb{R}^m \\rightarrow \\mathbb{R}$ be a scalar field. \n",
+    "\n",
+    "- Linearity: $\\nabla(f + c\\cdot g)(\\mathbf{x}) = \\nabla f(\\mathbf{x}) + c \\nabla g(\\mathbf{x})$, with $c$ a scalar.\n",
+    "- Chain rule (scalar function of vector function): $\\nabla_x s(f(\\mathbf{x})) = \\nabla s(f(\\mathbf{x}))^T \\cdot  \\nabla f(\\mathbf{x})$. Note that the $\\nabla_x$ denotes in the left hand side denotes that we are taking the gradient of $(s \\circ f)$ with respect to $\\mathbf{x}$ rather than the arguments of $s$.  On the right hand side, $\\nabla s (f(\\mathbf{x}))$ is the gradient of $s$ with respect to its inputs, evaluated at the point $f(\\mathbf{x})$. \n",
+    "- Chain rule (vector function of vector function): $\\nabla_x h(f(\\mathbf{x})) = \\nabla h (f(\\mathbf{x})) \\cdot  \\nabla f(\\mathbf{x})$ (A Jacobian matrix). Again, $\\nabla_x$ denotes taking the Jacobian of $h \\circ f$ and $\\nabla h$ takes the Jacobian of $h$.\n",
+    "- Multiplication rule: $\\nabla (s(\\mathbf{x}) f(\\mathbf{x})) = s(\\mathbf{x}) \\cdot \\nabla f(\\mathbf{x}) + f(\\mathbf{x}) \\cdot \\nabla s(\\mathbf{x})^T$. The second term in the sum is the outer product.\n",
+    "- Dot product rule: $\\nabla (f(\\mathbf{x})^T g(\\mathbf{x})) = \\nabla f(\\mathbf{x}) \\cdot g(\\mathbf{x}) + \\nabla g(\\mathbf{x}) \\cdot f(\\mathbf{x})$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -296,7 +374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -339,7 +417,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "330.867px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
