--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -30,8 +30,13 @@
     "minimization.) This is known as *unconstrained optimization*. The\n",
     "problem where the domain is limited to a closed set, such as an interval\n",
     "$[a,b]$, is known as *constrained optimization*, and will be covered in\n",
-    "the next section.\n",
-    "\n",
+    "the next section."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Mathematical notation and analysis\n",
     "\n",
     "In some cases, it may be possible to examine the function by hand and\n",
@@ -118,8 +123,13 @@
     "which means that $f^\\prime$ is negative to the left of $x$. This means\n",
     "that on the range $(x,x+\\delta)$, $f$ is monotonically increasing, and\n",
     "$(x-\\delta,x)$, $f$ is monotonically decreasing. Therefore, on the range\n",
-    "$(x-\\delta,x+\\delta)$, $x$ minimizes $f$.\n",
-    "\n",
+    "$(x-\\delta,x+\\delta)$, $x$ minimizes $f$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Gradient descent\n",
     "\n",
     "In many cases, however, $f$ can be very complex, so it may be difficult\n",
@@ -179,7 +189,7 @@
     "<a name=\"alg:GradientDescent\"></a>\n",
     "**Algorithm Gradient Descent**\n",
     "\n",
-    "1. **for** {$t=1,2,\\ldots,N_{max}$}\n",
+    "1. **for** $t=1,2,\\ldots,N_{max}$\n",
     "\n",
     "2. &nbsp;&nbsp;&nbsp; $\\mathbf{x}_{t+1} \\gets \\mathbf{x}_{t} - \\alpha_t \\nabla f(\\mathbf{x}_{t})$\n",
     "\n",
@@ -298,13 +308,63 @@
     "$S = S_1 \\times \\cdots \\times S_n$. In each iteration, each of the\n",
     "attributes $s_i$ is locally optimized in $S_i$ using a single step of\n",
     "steepest descent. These sweeps continue until convergence or a\n",
-    "termination condition is reached.\n",
+    "termination condition is reached."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Newton's method and related higher-order methods\n",
+    "\n",
+    "Newton's method is a *higher-order* optimization method that admits faster convergence than gradient descent. The idea is that at a minimum of $f$, the derivative is zero. So, we should seek points $x$ such that $f^\\prime(x) = 0$. \n",
+    "\n",
+    "#### 1-D Newton's method\n",
+    "\n",
+    "Given a current iterate $x_t$, we wish to seek a step $\\Delta x_t$ such that $f^\\prime(x_t + \\Delta x_t)=0$. We can construct a first-order Taylor expansion of $f^\\prime$ around $x_t$ to solve for such an approximate step.  This approximation uses the second derivative:\n",
+    "\n",
+    "$$f^\\prime(x_t + \\Delta x_t)\\approx f^\\prime(x_t)  +  f^{\\prime\\prime}(x_t) \\cdot \\Delta x_t$$\n",
+    "\n",
+    "By setting the right hand side to 0 and solving for $\\Delta x_t$, we get the expression $\\Delta x_t \\approx -f^\\prime(x_t) / f^{\\prime\\prime}(x_t)$.  Newton's method uses this as the step direction.\n",
     "\n",
     "\n",
-    "### Newton's method\n",
+    "#### Multivariate Newton's method\n",
     "\n",
-    "TODO: Describe newton's method and quasi newton methods.\n",
-    "\n"
+    "In $n$-D Newton's method, we simply replace the 1-D Taylor expansion of $f^\\prime$ with the $n-D$ Taylor expansion of the gradient $\\nabla f$:\n",
+    "\n",
+    "$$\\nabla f(\\mathbf{x}_t + \\Delta \\mathbf{x}_t)\\approx \\nabla f(\\mathbf{x}_t)  + \\nabla^2 f(\\mathbf{x}_t) \\cdot \\Delta \\mathbf{x}_t.$$\n",
+    "\n",
+    "Letting $H_t = \\nabla^2 f(\\mathbf{x}_t)$ be the Hessian matrix and $g_t = \\nabla f(\\mathbf{x}_t)$ the gradient at the current iterate, the solution is given by $\\Delta \\mathbf{x}_t = -H_t^{-1} g_t$.  This is then used as the step direction to determine the next iterate.\n",
+    "\n",
+    "Note that by seeking a critical point, the method does not include any information about whether the direction is taking $x_t$ toward a minimum, maximum, or inflection point. Hence, Newton's method is often combined with a line search to prevent divergence.  A complete implementation is given below:\n",
+    "\n",
+    "*****************\n",
+    "<a name=\"alg:NewtonsMethod\"></a>\n",
+    "**Algorithm Newton's Method**\n",
+    "\n",
+    "1. **for** $t=1,2,\\ldots,N_{max}$\n",
+    "\n",
+    "2. &nbsp;&nbsp;&nbsp; $H_t \\gets \\nabla^2 f(\\mathbf{x}_{t})$, $g_t \\gets \\nabla f(\\mathbf{x}_{t}).$\n",
+    "\n",
+    "2. &nbsp;&nbsp;&nbsp; $\\Delta \\mathbf{x}_{t} \\gets -H_t^{-1} g_t$\n",
+    "\n",
+    "3. &nbsp;&nbsp;&nbsp; $\\mathbf{x}_{t+1} \\gets \\mathbf{x}_{t} + \\alpha_t \\Delta \\mathbf{x}_t $ (with $\\alpha_t$ determined via line search)\n",
+    "\n",
+    "4. &nbsp;&nbsp;&nbsp; **if** $\\|\\nabla f(\\mathbf{x}_{t})\\| < \\epsilon_g$ **return** \"Converged\n",
+    "on critical point\"\n",
+    "\n",
+    "5. &nbsp;&nbsp;&nbsp; **if** $\\|\\mathbf{x}_{t+1}-\\mathbf{x}_{t}\\| < \\epsilon_x$ **return** \"Converged on an $x$ value\"\n",
+    "\n",
+    "6. &nbsp;&nbsp;&nbsp; **if** $f(\\mathbf{x}_{t+1}) > f(\\mathbf{x}_{t})$ **return** \"Diverging\"\n",
+    "\n",
+    "7. **return** \"Maximum number of iterations reached\"\n",
+    "*****************\n",
+    "\n",
+    "#### Levenberg-Marquardt methods\n",
+    "\n",
+    "#### Quasi-Newton methods\n",
+    "\n",
+    "TODO: Describe newton's method and quasi newton methods.\n"
    ]
   },
   {
@@ -515,7 +575,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -529,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
