--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -1070,7 +1070,7 @@
     "The Jacobian uses the concept of partial derivatives, which is a\n",
     "generalization of the standard derivative to functions with multiple\n",
     "arguments. This section gives a short introduction to partial\n",
-    "derivatives.\n",
+    "derivatives. More information can be found in [Appendix A.2](Calculus.ipynb).\n",
     "\n",
     "Given a two-argument function $f(x,y)$, the partial derivative with\n",
     "respect to $x$, evaluated at $(x,y)$ is denoted\n",
@@ -1128,7 +1128,7 @@
     "\n",
     "The Jacobian of an arbitrary vector function $\\mathbf{x} = f(\\mathbf{q})$, with\n",
     "$f: \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$ is given as the following\n",
-    "matrix of *partial derivatives*:"
+    "*matrix of partial derivatives*:"
    ]
   },
   {
@@ -2907,7 +2907,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2921,7 +2921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
