Added FMM figures and caption.

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -37,7 +37,7 @@
     "  * [Chapter 4. 3D rotations](3DRotations.ipynb)\n",
     "  * [Chapter 5. Robot kinematics](Kinematics.ipynb)\n",
     "  * [Chapter 6. Inverse kinematics](InverseKinematics.ipynb)\n",
-    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **text complete, figures 95% complete**\n",
+    "  * [Chapter 7. Representing geometry](Geometry.ipynb) \n",
     "\n",
     "* Section III. Motion Planning\n",
     "\n",
