--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -5174,9 +5174,8 @@
     "\n",
     "*************\n",
     "\n",
-    "TODO: illustration of fast marching method\n",
-    "<div class=\"figcaption\"><a name=\"fig:FMM\">Figure 14</a>. \n",
-    "    TODO\n",
+    "![Illustration of Fast Marching Method](figures/modeling/fmm.svg)\n",
+    "<div class=\"figcaption\"><a name=\"fig:FMM\">Figure 14</a>. Illustration of the Fast Marching Method in 2D for converting a polygon to a signed distance field. Left: the grid cells containing surfaces are identified (yellow) and the signed distances of grid vertices are computed (shaded circles, with blue indicating inside, red indicating outside). Middle left: Vertices of surface cells are marked as <em>accepted</em> (large circles). Distances are calculated to neighboring grid vertices, and these are labeled as <em>considered</em> and placed in the priority queue.  Middle right: Some vertices are popped off of the priority queue and marked as <em>accepted</em>. Distances are propagated (arrows) to their non-accepted neighbors and any <em>far</em> neighbors are marked as <em>considered</em> and added to the queue. Right: after further propagations, most distances across the grid are computed.\n",
     "    </div>\n",
     "\n",
     "*************\n",
