Added examples of sampling-based motion planning, more description of shortcutting

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb)\n",
     "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) \n",
-    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **text complete, figures 95% complete**\n",
+    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **98% complete**\n",
     "  * [Chapter 11. Planning with dynamics and uncertainty](PlanningWithDynamicsAndUncertainty.ipynb) **text 95% complete, figures 60% complete**\n",
     "  * [Chapter 12. Advanced topics in planning](AdvancedTopicsInPlanning.ipynb) **15% complete**\n",
     "\n",
